# Sample_Calc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: DeployUbuntuElf.yml  DeployWindows.yml
src/: SampleCalc.cpp  SampleCalc.h  main.cpp
test/: TestSampleCalc.h  test.cpp
